# xsh_playwright

./: calculate_cost.py  calculate_fans.py  calculate_salary.py  collect_xsh_user.py  cookies.txt  fans_correction.py  pgy_user_info.py  playwright_test.py  post_invite.py  pyproject.toml  selenium_parse.py  selenium_test.py  selenium_users_info.py  urls.txt  user_urls.txt  xhs_heat_report_all.py  xhs_orders_all.py
