[project]
name = "hello-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "bs4>=0.0.2",
  "duckdb>=1.3.2",
  "fastexcel>=0.16.0",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "polars>=1.35.2",
  "requests>=2.32.4",
  "selenium>=4.34.2",
  "selenium-stealth>=1.0.6",
]
